<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/teal_200"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="389dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="69dp"
                android:contentDescription="food_logo"
                android:src="@drawable/foodicon2" />


            <EditText
                android:id="@+id/email"
                android:layout_width="390dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="46dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="emailAddress"
                android:background="#FAFAFA"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:rotationX="6"
                android:singleLine="true"

                tools:ignore="TouchTargetSizeCheck">

            </EditText>

            <EditText
                android:id="@+id/password"
                android:layout_width="390dp"
                android:layout_height="46dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="password"
                android:background="#FAFAFA"
                android:hint="Password"
                android:inputType="textPassword"
                android:singleLine="true"
                app:endIconMode="password_toggle"
                tools:ignore="TouchTargetSizeCheck">

            </EditText>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/log_in"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:background="@color/common_google_signin_btn_text_dark_pressed"
                    android:backgroundTint="@color/primaryLightColor"
                    android:text="@string/Login"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/register"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/teal_200"
                    android:baselineAligned="false"
                    android:text="@string/Register"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/forgot"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:baselineAligned="false"
                    android:text="@string/button_forgot"
                    android:textAlignment="center"
                    android:backgroundTint="@color/colorCardView"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
